Bug 606430 - "ASSERTION: EnsureEditorInitialized has been called while a previous call was in progress"; r=bzbarsky a=blocking-final+